--- a/src/application/styles/global.scss
+++ b/src/application/styles/global.scss
@@ -8,6 +8,24 @@
   background-color: $color-primary;
 }
 
+.button {
+  background: $color-third;
+  border-radius: 50px;
+  box-shadow: $color-third 0 10px 20px -10px;
+  color: #FFFFFF;
+  cursor: pointer;
+  font-size: 16px;
+  font-weight: 700;
+  padding: 8px 18px;
+  border: 1px solid transparent;
+  transition: 0.3s ease;
+  &:hover{
+      background-color: transparent;
+      color: $color-third;
+      border-color: $color-third;
+  }
+}
+
 ::-webkit-scrollbar{
   width: 8px;
 }
