feat: ensure SignUp load with correct initial state

--- a/src/application/styles/global.scss
+++ b/src/application/styles/global.scss
@@ -8,6 +8,13 @@
   background-color: $color-primary;
 }
 
+.bg-danger{
+  background-color: $color-third;
+}
+.bg-success{
+  background-color: #198754;
+}
+
 .button {
   background: $color-third;
   border-radius: 50px;
