test: ensure signup prevent multiple submits

--- a/src/application/styles/global.scss
+++ b/src/application/styles/global.scss
@@ -32,6 +32,13 @@
       border-color: $color-third;
   }
 }
+.button:disabled,
+.button.disabled{
+  color:#fff;
+  background-color: transparent;
+  color: #fd4f5597;
+  border-color: #fd4f5597;
+}
 
 ::-webkit-scrollbar{
   width: 8px;
