style: add style Home view

--- a/src/application/styles/colors.scss
+++ b/src/application/styles/colors.scss
@@ -3,3 +3,37 @@ $color-secondary: #7D7D7D;
 $color-third: #fd4f55;
 $box-shadow: #d9dbdfa6;
 $color-idPokemon: #A9B0B8;
+
+$pokemon-grass:#A8EB84;
+$pokemon-ground: #FFCC85;
+$pokemon-fire: #FF984F;
+$pokemon-fighting: #E36E68;
+$pokemon-water: #A6BCF2;
+$pokemon-ice: #83DDFF;
+$pokemon-psychic: #F490A3;
+$pokemon-electric: #FFDC53;
+$pokemon-ghost: #A715EB;
+$pokemon-fairy: #E770EB;
+$pokemon-bug:#AEEB00;
+$pokemon-steel: #9EB7B8;
+$pokemon-dark:#707070;
+$pokemon-poison: #B501F0;
+$pokemon-rock: #A38C21;
+$pokemon-normal: #A4ACAF;
+
+$pokemon-text-electric: #8d7825;
+$pokemon-text-grass: #2a5712;
+$pokemon-text-poison: #340344;
+$pokemon-text-fire: #793d13;
+$pokemon-text-water: #3d538b;
+$pokemon-text-bug: #48581c;
+$pokemon-text-ghost: #390f4d;
+$pokemon-text-fairy: #390f4d;
+$pokemon-text-psychic: #994958;
+$pokemon-text-fighting: #8d1e18;
+$pokemon-text-steel: #5a6c6d;
+$pokemon-text-normal: #585e61;
+$pokemon-text-ice: #3d829b;
+$pokemon-text-ground: #9b7238;
+$pokemon-text-rock: #63561b;
+$pokemon-text-dark: #383030;
