--- a/src/application/styles/global.scss
+++ b/src/application/styles/global.scss
@@ -5,7 +5,10 @@
   margin: 0;
   box-sizing: border-box;
   font-family: 'Roboto', sans-serif;
-  background-color: $color-primary;
+}
+
+body{
+  background: $color-primary!important;
 }
 
 .bg-danger{
