feat: add skeleton shimmer effect

--- a/src/application/styles/colors.scss
+++ b/src/application/styles/colors.scss
@@ -2,7 +2,8 @@ $color-primary: #F7F8FA;
 $color-secondary: #7D7D7D;
 $color-third: #fd4f55;
 $box-shadow: #d9dbdfa6;
-$color-idPokemon: #A9B0B8;
+$color-light-gray: #A9B0B8;
+$background-shimmer: #e2e3e5;
 
 $pokemon-grass:#A8EB84;
 $pokemon-ground: #FFCC85;
