--- a/src/application/components/card-pokemon/styles.scss
+++ b/src/application/components/card-pokemon/styles.scss
@@ -61,7 +61,7 @@
   .idPokemon{
     background-color: transparent;
     font-weight: bold;
-    color: $color-idPokemon;
+    color: $color-light-gray;
     padding-top: 3rem;
     margin-bottom: 0px;
   }
@@ -79,5 +79,5 @@
     align-items: center;
     gap: 15px;
     background-color: transparent;
-}
+  }
 }
