--- a/src/application/components/input/styles.scss
+++ b/src/application/components/input/styles.scss
@@ -1,6 +1,6 @@
 @import '../../styles/colors.scss';
 
-.formGroup{
+.input-form-group{
   margin-top: 3rem;
   display: flex;
   justify-content: center;
@@ -11,7 +11,7 @@
   position: relative;
   height: 35px;
 
-  .label{
+  .input-label{
     display: flex;
     justify-content: center;
     align-items: center;
@@ -28,7 +28,7 @@
       font-size: 1.7rem;
     }
   }
-  .inputName{
+  .input-name{
     display: flex;
     outline: none;
     justify-content: center;
