--- a/src/application/components/footer/styles.scss
+++ b/src/application/components/footer/styles.scss
@@ -7,15 +7,15 @@ footer{
   align-items: center;
   margin: 2rem 0 1rem;
 
-  .name{
+  .footer-name{
     font-weight: bold;
   }
 
-  .icons{
+  .footer-icons{
     display: flex;
     gap: 15px;
   }
-  .linkIcon{
+  .footer-linkIcon{
   background-color: $color-third;
   width: 30px;
   height: 30px;
@@ -26,7 +26,7 @@ footer{
   cursor: pointer;
   }
 
-  .icon{
+  .footer-icon{
     background-color: transparent;
     color: white;
     font-size: 1.3rem;
