style: add style ModalDatPokemon component

--- a/src/application/styles/colors.scss
+++ b/src/application/styles/colors.scss
@@ -38,3 +38,11 @@ $pokemon-text-ice: #3d829b;
 $pokemon-text-ground: #9b7238;
 $pokemon-text-rock: #63561b;
 $pokemon-text-dark: #383030;
+
+
+$color-hp:#DB243B;
+$color-atk:#FE9C55;
+$color-def:#FFDA51;
+$color-spa:#85DDFE;
+$color-spo:#B3EE9F;
+$color-spd:#EF9FB4;
