refactor: ensure CardPokemon add red heart if the pokemon is a favorite

--- a/src/application/components/card-pokemon/styles.scss
+++ b/src/application/components/card-pokemon/styles.scss
@@ -35,7 +35,7 @@
     border: none;
   }
   
-  .favorite{
+  .icon-favorite{
     background-color: transparent;
     width: 25px;
     height: 20px;
@@ -46,7 +46,7 @@
     }
   }
   
-  .favoriteRed{
+  .icon-favorite-red{
     background-color: transparent;
     width: 25px;
     height: 20px;
