--- a/src/application/components/card-pokemon/styles.scss
+++ b/src/application/components/card-pokemon/styles.scss
@@ -1,83 +1,86 @@
 @import '../../styles/colors.scss';
 
-.card-pokemon{
+.container-card-pokemon {
   position: relative;
-  margin: 0;
-  width: 280px;
-  margin-top: 5rem;
-  height: 180px;
-  background-color: #ffffff ;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  border-radius: 10px;
-  box-shadow: $box-shadow 0px 5px 15px;
-  cursor: pointer;
-  transition: 0.5s;
-  
-  .card-pokemon-img-pokemon{
-    background-color: transparent;
-    width: 150px;
-    position: absolute;
-    top: -85px;
-    right: 50%;
-    transform: translate(50%);
-  }
-  
   .card-pokemon-button-favorite{
     position: absolute;
     background-color: transparent;
-    top: 8px;
+    top: 82px;
     right: 8px;
     width: 35px;
     height: 30px;
     border: none;
-  }
+    z-index: 2;
+    .icon-favorite{
+      background-color: transparent;
+      width: 25px;
+      height: 20px;
+      cursor: pointer;
   
-  .icon-favorite{
-    background-color: transparent;
-    width: 25px;
-    height: 20px;
-    cursor: pointer;
-
-    &:hover{
+      &:hover{
+        color: $color-third;
+      }
+    }
+    
+    .icon-favorite-red{
+      background-color: transparent;
+      width: 25px;
+      height: 20px;
+      cursor: pointer;
       color: $color-third;
+      transition: 0.5s;
+      &:hover{
+        transform: scale(1.1);
+      }
     }
   }
-  
-  .icon-favorite-red{
-    background-color: transparent;
-    width: 25px;
-    height: 20px;
-    cursor: pointer;
-    color: $color-third;
-    transition: 0.5s;
-    &:hover{
-      transform: scale(1.1);
-    }
-  }
-  
-  .card-pokemon-id-pokemon{
-    background-color: transparent;
-    font-weight: bold;
-    color: $color-light-gray;
-    padding-top: 3rem;
-    margin-bottom: 0px;
-  }
-
-  .card-pokemon-name-pokemon{
-    background-color: transparent;
-    font-weight: bold;
-    color: black;
-    font-size: 1.5rem;
-  }
-
-  .card-pokemon-types-pokemon{
+  .card-pokemon{
+    position: relative;
+    margin: 0;
+    width: 280px;
+    margin-top: 5rem;
+    height: 180px;
+    background-color: #ffffff ;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
-    gap: 15px;
-    background-color: transparent;
+    border-radius: 10px;
+    box-shadow: $box-shadow 0px 5px 15px;
+    cursor: pointer;
+    transition: 0.5s;
+    
+    .card-pokemon-img-pokemon{
+      background-color: transparent;
+      width: 150px;
+      position: absolute;
+      top: -85px;
+      right: 50%;
+      transform: translate(50%);
+    }
+    
+    .card-pokemon-id-pokemon{
+      background-color: transparent;
+      font-weight: bold;
+      color: $color-light-gray;
+      padding-top: 3rem;
+      margin-bottom: 0px;
+    }
+  
+    .card-pokemon-name-pokemon{
+      background-color: transparent;
+      font-weight: bold;
+      color: black;
+      font-size: 1.5rem;
+    }
+  
+    .card-pokemon-types-pokemon{
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      gap: 15px;
+      background-color: transparent;
+    }
   }
 }
+
